# ai-news-pipeline-demo

./: .gitignore  README.md  pyproject.toml
apps/ai-news/: pyproject.toml
apps/ai-news/src/ai_news/: config.py  main.py  script_generator.py  tts.py  video_builder.py
